third_party/move/move-compiler-v2/tests/checking/variants/variants_empty.move
module 0x42::variants_empty {
    enum T{}
}
